change scrollbar, fix nav buttons and change about resp

--- a/index.scss
+++ b/index.scss
@@ -20,6 +20,30 @@ body {
     color: $primary-color;
     font-family: $font-family;
     background-color: $bg-color;
+    overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+    width: 16px;
+}
+
+body:not([no-y-overflow])::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: #aaa;
+}
+
+body::-webkit-scrollbar-thumb {
+    height: 10px;
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: hsl(0, 0%, 67%);
+}
+
+::-webkit-scrollbar-track {
+    background: $bg-color;
 }
 
 body > header {
@@ -35,6 +59,10 @@ body > header {
 
 .button.is-info.is-outlined:hover {
     background-color: hsl(207deg, 61%, 20%);
+}
+
+.profile-photo {
+    margin-right: 7%;
 }
 
 .navbar {
@@ -330,6 +358,10 @@ section {
 
         .navbar-brand {
             width: 100%;
+        }
+
+        .navbar-burger {
+            display: block;
         }
     }
 
